--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul class="list-group mt-3" id="w-details">
                     <li class="list-group-item" id="w-humidity"></li>
                     <li class="list-group-item" id="w-dewpoint"></li>
-                    <li class="list-group-item" id="w-feels-like"></li>
+                    <li class="list-group-item" id="w-feelsLike"></li>
                     <li class="list-group-item" id="w-wind"></li>
                 </ul>
                 <hr>
@@ -47,8 +47,20 @@
                             <input type="text" id="city" class="form-control">
                         </div>
                         <div class="from-group">
-                            <label for="state">State</label>
+                            <label for="state">Country</label>
                             <input type="text" id="state" class="form-control">
+                        </div>
+                        <label for="unit">Units</label>
+                        <div class="from-group row center" style="margin-left: 0;">
+                            <div class="">
+                                <label for="state">&#8451;&nbsp;</label>
+                                <input type="radio" name="unit" value="metric" class="" checked>
+                            </div>
+                            <span style="color: transparent;">123</span>
+                            <div class="">
+                                <label for="state">&#8457;&nbsp;</label>
+                                <input type="radio" name="unit" value="imperial" class="">
+                            </div>
                         </div>
                     </form>
                 </div>
