--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
                             <input type="text" id="city" class="form-control">
                         </div>
                         <div class="from-group">
-                            <label for="state">Country</label>
-                            <input type="text" id="state" class="form-control">
+                            <label for="country">Country Code</label>
+                            <input type="text" id="country" class="form-control" placeholder="EG">
                         </div>
                         <label for="unit">Units</label>
                         <div class="from-group row center" style="margin-left: 0;">
                             <div class="">
                                 <label for="state">&#8451;&nbsp;</label>
-                                <input type="radio" name="unit" value="metric" class="" checked>
+                                <input type="radio" name="unit" id="unit" value="metric" class="" checked>
                             </div>
                             <span style="color: transparent;">123</span>
                             <div class="">
                                 <label for="state">&#8457;&nbsp;</label>
-                                <input type="radio" name="unit" value="imperial" class="">
+                                <input type="radio" name="unit" id="unit1" value="imperial" class="">
                             </div>
                         </div>
                     </form>
