--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <form id="w-from">
                         <div class="from-group">
                             <label for="city">City</label>
-                            <input type="text" id="city" class="form-control">
+                            <input type="text" id="city" class="form-control" placeholder="CAIRO">
                         </div>
                         <div class="from-group">
                             <label for="country">Country Code</label>
